--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <header class="max-w-screen-xl mx-auto poppins">
+    <header class="max-w-screen-xl sm:px-10 mx-auto poppins">
         <nav class="navbar bg-base-100">
             <div class="flex flex-1 items-center">
                 <div class="dropdown">
@@ -51,8 +51,68 @@
         </nav>
     </header>
 
-    <main>
+    <main class="max-w-screen-xl mx-auto sm:px-10">
+        <section id="hero" class="mt-12.5 px-3">
+            <div class="carousel w-full bg-orange-100 rounded-l ">
+                <div id="slide1" class="carousel-item relative w-full">
+                    <div class="w-full p-10 lg:p-25 grid grid-cols-1 lg:grid-cols-2">
+                        <div class="flex flex-col justify-center">
+                            <h1 class="font-bold text-4xl lg:text-6xl">Ride-on R15 V4 with Smile</h1>
+                            <p class="mt-5 mb-7.5 font-light text-gray-500">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                            <div>
+                                <a class="btn bg-[#E76F51] text-white">Purchase</a>
+                            </div>
+                        </div>
+                        <div class="mt-10 lg:mt-0">
+                            <img src="images/slider/bike1.png" class="mx-auto" alt="">
+                        </div>
+                    </div>
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide3" class="btn btn-circle bg-transparent text-2xl font-extralight">❮</a>
+                    <a href="#slide2" class="btn btn-circle bg-transparent text-2xl font-extralight">❯</a>
+                    </div>
+                </div>
+                <div id="slide2" class="carousel-item relative w-full">
+                    <div class="w-full p-10 lg:p-25 grid grid-cols-1 lg:grid-cols-2">
+                        <div class="flex flex-col justify-center">
+                            <h1 class="font-bold text-4xl lg:text-6xl">Ride-on R15 V4 with Smile</h1>
+                            <p class="mt-5 mb-7.5 font-light text-gray-500">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                            <div>
+                                <a class="btn bg-[#E76F51] text-white">Purchase</a>
+                            </div>
+                        </div>
+                        <div class="mt-10 lg:mt-0">
+                            <img src="images/slider/bike2.png" class="mx-auto" alt="">
+                        </div>
+                    </div>
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide1" class="btn btn-circle bg-transparent text-2xl font-extralight">❮</a>
+                    <a href="#slide3" class="btn btn-circle bg-transparent text-2xl font-extralight">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full">
+                    <div class="w-full p-10 lg:p-25 grid grid-cols-1 lg:grid-cols-2">
+                        <div class="flex flex-col justify-center">
+                            <h1 class="font-bold text-4xl lg:text-6xl">Ride-on R15 V4 with Smile</h1>
+                            <p class="mt-5 mb-7.5 font-light text-gray-500">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                            <div>
+                                <a class="btn bg-[#E76F51] text-white">Purchase</a>
+                            </div>
+                        </div>
+                        <div class="mt-10 lg:mt-0">
+                            <img src="images/slider/bike3.png" class="mx-auto" alt="">
+                        </div>
+                    </div>
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide2" class="btn btn-circle bg-transparent text-2xl font-extralight">❮</a>
+                    <a href="#slide1" class="btn btn-circle bg-transparent text-2xl font-extralight">❯</a>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
 
+        
     </main>
 
     <footer>
