finished featured bikes section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         font-family: "Poppins", sans-serif;
         font-weight: 400;
         font-style: normal;
+        line-height:normal;
         }
     </style>
 </head>
@@ -52,7 +53,7 @@
     </header>
 
     <main class="max-w-screen-xl mx-auto sm:px-10">
-        <section id="hero" class="mt-12.5 px-3">
+        <section id="hero" class="mt-12.5 mb-40 px-3">
             <div class="carousel w-full bg-orange-100 rounded-l ">
                 <div id="slide1" class="carousel-item relative w-full">
                     <div class="w-full p-10 lg:p-25 grid grid-cols-1 lg:grid-cols-2">
@@ -112,7 +113,21 @@
             </div>
         </section>
 
-        
+        <section class="mb-40 px-3 text-center">
+            <h2 class="font-semibold text-5xl mb-2.5">Fetured Bikes In This Year</h2>
+            <p class="text-[#E76F51] font-semibold text-sm relative before:absolute before:w-[58px] before:h-[1px] before:bg-[#E76F51] before:left-1/2 before:-translate-x-1/2 before:-bottom-1 mb-12.5">Best bike collection</p>
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-25">
+                <div>
+                    <img class="mx-auto grayscale" src="images/others/feature-bike.png" alt="">
+                </div>
+                <div>
+                    <img class="mx-auto" src="images/others/feature-bike.png" alt="">
+                </div>
+                <div>
+                    <img class="mx-auto grayscale" src="images/others/feature-bike.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
