finished latest news section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </ul>
             </div>
             <div class="">
-                <a class="btn bg-[#E76F51] text-white">Login</a>
+                <a class="btn bg-[#E76F51] text-white ml-12.5">Login</a>
             </div>
         </nav>
     </header>
@@ -125,6 +125,54 @@
                 </div>
                 <div>
                     <img class="mx-auto grayscale" src="images/others/feature-bike.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section class="mb-40 px-3">
+            <h2 class="font-semibold text-5xl text-center mb-12.5">Lates News</h2>
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
+                <div class="card bg-base-100 w-full shadow-sm border border-gray-300">
+                    <figure class="px-6 pt-6">
+                        <img
+                        src="images/others/latest1.png"
+                        alt="Shoes" />
+                    </figure>
+                    <div class="card-body">
+                        <h3 class="card-title">Ducati XDIAVEL S-73</h3>
+                        <p class="mb-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <div class="card-actions justify-start">
+                        <button class="btn btn-outline border border-solid border-[#E76F51] text-[#E76F51] font-semibold text-lg hover:bg-[#E76F51] hover:text-white duration-700">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-base-100 w-full shadow-sm border border-gray-300">
+                    <figure class="px-6 pt-6">
+                        <img
+                        src="images/others/latest2.png"
+                        alt="Shoes" />
+                    </figure>
+                    <div class="card-body">
+                        <h3 class="card-title">Ducati XDIAVEL S-73</h3>
+                        <p class="mb-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <div class="card-actions justify-start">
+                        <button class="btn btn-outline border border-solid border-[#E76F51] text-[#E76F51] font-semibold text-lg hover:bg-[#E76F51] hover:text-white duration-700">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-base-100 w-full shadow-sm border border-gray-300">
+                    <figure class="px-6 pt-6">
+                        <img
+                        src="images/others/latest3.png"
+                        alt="Shoes" />
+                    </figure>
+                    <div class="card-body">
+                        <h3 class="card-title">Ducati XDIAVEL S-73</h3>
+                        <p class="mb-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <div class="card-actions justify-start">
+                        <button class="btn btn-outline border border-solid border-[#E76F51] text-[#E76F51] font-semibold text-lg hover:bg-[#E76F51] hover:text-white duration-700">Read More</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
