finished client review section

--- a/index.html
+++ b/index.html
@@ -176,6 +176,51 @@
                 </div>
             </div>
         </section>
+
+        <section class="mb-40 px-3 text-center">
+            <h2 class="text-5xl font-semibold mb-12.5">Happy <span class="text-[#E76F51] mb-12.5">Clients says</span></h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-11">
+                <div class="px-9 py-10 flex flex-col border border-[#DEDEDE] rounded-lg">
+                    <img src="images/others/user-1.png" class="mb-7.5" alt="">
+                    <p class="text-[#6C6C6C] mb-4">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                    <div class="mx-auto flex gap-[5px]">
+                        <img src="images/icons/star-solid.svg" class="size-5.5" alt="">
+                        <img src="images/icons/star-solid.svg" class="size-5.5" alt="">
+                        <img src="images/icons/star-solid.svg" class="size-5.5" alt="">
+                        <img src="images/icons/star-solid.svg" class="size-5.5" alt="">
+                        <img src="images/icons/star-half-stroke-solid.svg" class="size-5.5" alt="">
+                    </div>
+                    <h3 class="font-semibold my-4 text-sm text-[#23A6F0]">Regina Miles</h3>
+                    <h4 class="font-semibold text-sm text-[#252B42]">Banker</h4>
+                </div>
+                <div class="px-9 py-10 flex flex-col border border-[#DEDEDE] rounded-lg">
+                    <img src="images/others/user-2.png" class="mb-7.5" alt="">
+                    <p class="text-[#6C6C6C] mb-4">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                    <div class="mx-auto flex gap-[5px]">
+                        <img src="images/icons/star-solid.svg" class="size-5.5" alt="">
+                        <img src="images/icons/star-solid.svg" class="size-5.5" alt="">
+                        <img src="images/icons/star-solid.svg" class="size-5.5" alt="">
+                        <img src="images/icons/star-solid.svg" class="size-5.5" alt="">
+                        <img src="images/icons/star-half-stroke-solid.svg" class="size-5.5" alt="">
+                    </div>
+                    <h3 class="font-semibold my-4 text-sm text-[#23A6F0]">Regina Miles</h3>
+                    <h4 class="font-semibold text-sm text-[#252B42]">Banker</h4>
+                </div>
+                <div class="px-9 py-10 flex flex-col border border-[#DEDEDE] rounded-lg">
+                    <img src="images/others/user-3.png" class="mb-7.5" alt="">
+                    <p class="text-[#6C6C6C] mb-4">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                    <div class="mx-auto flex gap-[5px]">
+                        <img src="images/icons/star-solid.svg" class="size-5.5" alt="">
+                        <img src="images/icons/star-solid.svg" class="size-5.5" alt="">
+                        <img src="images/icons/star-solid.svg" class="size-5.5" alt="">
+                        <img src="images/icons/star-solid.svg" class="size-5.5" alt="">
+                        <img src="images/icons/star-half-stroke-solid.svg" class="size-5.5" alt="">
+                    </div>
+                    <h3 class="font-semibold my-4 text-sm text-[#23A6F0]">Regina Miles</h3>
+                    <h4 class="font-semibold text-sm text-[#252B42]">Banker</h4>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
