finished FAQ section

--- a/index.html
+++ b/index.html
@@ -221,6 +221,37 @@
                 </div>
             </div>
         </section>
+
+        <section class="mb-40 px-3">
+            <h2 class="mb-12.5 text-center text-5xl font-semibold">Frequently Asked <span class="text-[#E76F51]">Questions</span></h2>
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-20">
+                <div class="flex justify-center items-center">
+                    <img src="images/others/faq.png" alt="">
+                </div>
+                <div>
+                    <div class=" mb-3 collapse collapse-arrow bg-base-100 border border-base-300">
+                        <input type="radio" name="my-accordion-2" checked="checked" />
+                        <div class="collapse-title font-semibold">What are the most important things I should know about riding a bike?</div>
+                        <div class="collapse-content text-sm">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</div>
+                    </div>
+                    <div class=" mb-3 collapse collapse-arrow bg-base-100 border border-base-300">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title font-semibold">How can I tell if my helmet is old and I need a new one?</div>
+                        <div class="collapse-content text-sm">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</div>
+                    </div>
+                    <div class=" mb-3 collapse collapse-arrow bg-base-100 border border-base-300">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title font-semibold">My bike has been in storage is it safe to ride?</div>
+                        <div class="collapse-content text-sm">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</div>
+                    </div>
+                    <div class="collapse collapse-arrow bg-base-100 border border-base-300">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title font-semibold">What rules should I follow when riding my bike?</div>
+                        <div class="collapse-content text-sm">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
