--- a/index.html
+++ b/index.html
@@ -254,8 +254,29 @@
         </section>
     </main>
 
-    <footer>
-
+    <footer class="bg-[#0B0D17] pt-14 pb-20">
+        <div class="max-w-screen-xl mx-auto sm:px-13 px-3 flex flex-col md:flex-row gap-15 justify-between">
+            <div>
+                <div class="flex gap-6">
+                    <a class="text-white no-underline" href="#">Download Now</a>
+                    <a class="text-white no-underline" href="#">License</a>
+                </div>
+                <div class="flex flex-wrap gap-6 mt-3 mb-6">
+                    <a class="text-white no-underline" href="#">About</a>
+                    <a class="text-white no-underline" href="#">Features</a>
+                    <a class="text-white no-underline" href="#">Pricing</a>
+                    <a class="text-white no-underline" href="#">Careers</a>
+                    <a class="text-white no-underline" href="#">Help</a>
+                    <a class="text-white no-underline" href="#">Privacy Policy</a>
+                </div>
+                <p class="text-sm text-[#D9DBE1]">© 2020 bike. All rights reserved</p>
+            </div>
+            <div class="flex flex-col gap-4">
+                <h6 class="text-[#D9DBE1] text-lg font-medium">Get The App</h6>
+                <img class="w-34" src="images/others/android.png" alt="">
+                <img class="w-34" src="images/others/ios.png" alt="">
+            </div>
+        </div>
     </footer>
 </body>
 </html>
